--- a/GameCode/GameCode.csproj
+++ b/GameCode/GameCode.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EO.Pdf" Version="20.0.81" />
+  </ItemGroup>
+
 </Project>
